force-app/main/default/objects/Job__c.object
<CustomObject>
    <description>Greenshouse.io&apos;s Jobs</description>
    <fields>
        <fullName>Closed_at__c</fullName>
        <label>Closed at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_at__c</fullName>
        <label>Created at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Greenhouse_io_Id__c</fullName>
        <label>Greenhouse.io Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opened_at__c</fullName>
        <label>Opened at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requisition_Id__c</fullName>
        <label>Requisition Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Closed_at__c</columns>
        <columns>Opened_at__c</columns>
        <columns>Created_at__c</columns>
        <columns>Confidential__c</columns>
        <columns>Greenhouse_io_Id__c</columns>
        <columns>Requisition_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JN-{0000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>